--- a/style.css/edit.css
+++ b/style.css/edit.css
@@ -543,13 +543,14 @@ input[type="number"] {
 }
 
 .checkout-btn {
-    margin-top: 100px;
-    background: #3E7B27;
-    color: whitesmoke;
-    padding: 10px 15px;
+    background: #2C3930;
+    color: white;
     border: none;
+    padding: 10px 40px; /* Increased padding for width */
     cursor: pointer;
-    font-size: 16px;
+    border-radius: 5px;
+    text-decoration: none; /* Removes underline */
+    display: inline-block; /* Ensures it behaves like a button */
 }
 .cart-summary p{
     color: whitesmoke;
